--- a/templates/home.html
+++ b/templates/home.html
@@ -189,7 +189,7 @@
                 <a style="text-decoration: none;" href="https://linktr.ee/nullxco"><div class="nc-animated-title">NullxCoder</div></a>
             </div>
             <div class="container log-out">
-                <a href=""><button  type="button" class="btn btn-warning">Logout</button></a>
+                <a href="{% url 'logout-user' %}"><button  type="button" class="btn btn-warning">Logout</button></a>
             </div>
         </div>
         
