--- a/templates/login.html
+++ b/templates/login.html
@@ -37,7 +37,8 @@
             max-width: 300px;
         }
         .nc-animated-title {
-            
+            font-size: x-large;
+            font-weight: 700;
             margin-top: 10%;
             margin: 0;
             padding: 0;
@@ -45,11 +46,6 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: var(--background-dark);
-            color: white;
-            font-family: var(--font-family-default);
-            font-size: 20px;
-            font-weight: bold;
             background: linear-gradient(90deg, var(--text-animation-color-start), var(--text-animation-color-middle), var(--text-animation-color-end));
             background-size: 200% auto;
             color: transparent;
@@ -57,6 +53,13 @@
             -webkit-text-fill-color: transparent;
             animation: nc-slide-colors 5s ease infinite;
         }
+        
+        @keyframes nc-slide-colors {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+        
         input[type="text"], input[type="password"] {
             width: 100%;
             padding: 12px;
@@ -98,7 +101,8 @@
 <body>
     <div class="content">
         <h1 style="text-align: center;">Login</h1>
-        <form id="loginForm">
+        <form id="loginForm" action="{% url 'login-user' %}" method="post">
+            {% csrf_token %}
             <input type="text" id="username" placeholder="Username" required>
             <input type="password" id="password" placeholder="Password" required>
             <button type="submit">Login</button>
