--- a/templates/login.html
+++ b/templates/login.html
@@ -193,13 +193,14 @@
         
     </div>
     <script>
-        // Automatically remove the alert after the animation completes
         setTimeout(() => {
             const alerts = document.querySelectorAll('.alert');
             alerts.forEach(alert => {
-                alert.remove(); // Remove alert from DOM
+                alert.remove(); 
             });
-        }, 4000); // 0.5s slide in + 3s stay visible + 0.5s slide out = 4s total
+        }, 4000); 
+        
+        
     </script>
 </body>
 </html>
